fix stretched link

--- a/assets/sass/_theme/_utils.sass
+++ b/assets/sass/_theme/_utils.sass
@@ -167,7 +167,7 @@
         @include media-breakpoint-up(md)
             font-size: $article-title-size-md
     a
-        @include stretched-link
+        @include stretched-link(before)
     p
         margin-bottom: 0
         margin-top: 0
